(follow-up r91518; bug 29658 et al.) Improving RTL support for several extensions: AbuseFilter: aligning rules edit box as LTR, since they are essentially English CodeReview: aligning commit messages according to content language direction; and aligning input boxes on SpecialRepoAdmin as LTR FlaggedRevs: aligning box shown on articles to content language dir; and adding direction marks to ReviewedPages & UnreviewedPages LiquidThreads: * add direction mark * make headings follow the content language dir * remove lqt_post_ltr/rtl (added a few commits ago) to use mw-content-ltr/rtl in core UploadWizard: make calendar input follow user direction (not content direction, as since r91518) (see bug 28902)
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@91519 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/modules/ext.codereview.styles.css
+++ b/modules/ext.codereview.styles.css
@@ -15,6 +15,12 @@ table.mw-codereview-meta td {
 	max-width: 20em;
 	overflow: hidden;
 }
+/* @noflip */.sitedir-ltr .TablePager_col_cr_message, .sitedir-ltr .mw-codereview-message {
+	direction: ltr;
+}
+/* @noflip */.sitedir-rtl .TablePager_col_cr_message, .sitedir-rtl .mw-codereview-message {
+	direction: rtl;
+}
 
 .TablePager_col_cr_timestamp {
 	white-space: nowrap;
